--- a/gift.html
+++ b/gift.html
@@ -112,9 +112,12 @@
 
   <h1>Tasty gifts and Short note for my cute princess 💖</h1>
   <p >
-    My love for you grows with every heartbeat. <br>
-    Here's a small token of my love, but the real gift... <br>
-    is every moment we'll share together for the rest of our lives. 💞
+   Happy 6 month anniversary pihu ❤❤ 
+Babu yarr ye pakistan ki vajah se hai nhi to ham sath 🥳 🥳 karte apni 6 month anniversary lekin babu ham virtually hi celebrate karenge babu. Babu kitni jaldi nikal gye ye 6 mahine bilkul bhi pata nhi laga hai hame ayesa lag raha hai abhi to mile the ham itni jaldi 6 mahine ho gye lekin babu inn 6 mahino me aur usse pahle do mahine hamne bahut kuch kiya ek axe dost bane phir ham todha aage aye relationship me aye aur dekho ham kitna aage gye hai physical bhi ho chuke hai isko pura credit aapki jata hai aapna har cheej me efforts kiye pahle aur agar aap kuch na karti to mere se kabhi bhi kuch nhi hota ham ab bhi vhi hote jaha aaj se 6-7 mahine pahle the normal dost hi hote bass lekin babu aapki vajah se ham itna close aa chuke hai love u babu aur isse axi baat ye hai ki mujhe aap jaisi ladki milna impossible hai aaj ke tym par aur aap khud mere pass ayi bahut axi kismat hai meri aapne hi number manga aapne hi baat start ki aur aapne hi ek tarah se propose ka reason thi aur aapne hi pahle kissi bhi ki babu dekho mujhe pata aapne ye sab cheeje bahut soach smajh ke hi hai tabhi maine ye decision aap par choad rakhe the ki aap jo karogi soach samjh ke shi tym pe karogi ki aapko kabhi regret na ho kyuki mai kabhi bhi kuch kar deta hu . Aapna bahut aca kiya babu meri bandi ban ke aapke jaise care karne wali pyar karne wali samjhne wali koi nhi milegi baby aap great beautiful genius cute best aur golu molu sab ho aur baby mai bhi best ban ke dikhaunga babu mujhe pata hai bahut rona hai kabhi kabhi ki mai aap par gussa kaise kar deta hu agar mai aap jaisi ladki par gussa kar raha hu to mai bahut ganda deserve karta hu yar lekin babu ab nhi karunga pakka babu .
+Axa babu aaj kya kya khate ham pastry 🍰 khate aloo roll khate babu sath me room jaate kitna maje karte baby kapde khol ke chipak ke let jate aapko apni goad me baitha khub pyar karta aapke baal sehlata babu kitna aca lagta na lekin ham ye sab karenge 20 babu 
+Aur sach me babu thanks u aur love meri zinadagi me aane ke liye aur hamesa rahna mere sath babu koi kami ho mujh me to bata dena mai sudhar lunga babu aur dekhna ham abhi dekhte dekhte 60 saal ke ho jayenge mai ye soachta hu usse tym hamare dant nhi hongi to kissi karne me todi dikkat hogi na baby 
+Happy anniversary babuuuuuu 🥰🥰
+I love you pihuuuuuu khub sarraaaaa❤❤
   </p>
 
   <div class="gallery">
