--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 
   <div class="container">
-    <h1>Happy Months Anniversary, Nishtha! ❤️</h1>
+    <h1>Happy 6 Months Anniversary, Nishtha! ❤️</h1>
     <p>Happyyyyy Hapyyyyy Anniversaryyyyyyy pihuuuuuu❤️❤️. Yeeeeeeee hamare 6 months pure ho gye babu. Lets celebrate babu partyyyyyyyyyy🥳🥳.</p>
     <button onclick="window.location.href='proposal.html'">Click for a Surprise</button>
 
